# bauripixel

./: .clang-format  .gitignore  .inferconfig  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  notes.txt  packer.py
assets/media/drawtools/: colors.aseprite  drawtools.aseprite  drawtools_icon_minimal.aseprite  drawtools_minimal.rgi
assets/media/logos/: duck_logo.aseprite  logo_draft.aseprite
launchers/: bauripixel.desktop  bauripixel_z.desktop
notes/: gui_diagram.d2
src/: app.c  frames.c  gui.c  layers.c  main.c  main.zig  minshell.html  nativedlg.c  tabs.c  utils.c
src/canvas/: draw.c
src/components/: button.c  input.c  panels.c  slider.c  winpanels.c
src/include/: app.h  colors.h  components.h  defaults.h  drawtools.h  export.h  frames.h  gui.h  layers.h  menuinfo.h  nativedlg.h  options.h  rgthemes.h  tabs.h  theme.h  toolinfo.h  toolinfos.h  utils.h
src/include/canvas/: draw.h
src/include/exported/: appicon.h  biosfontii.h  drawtoolicons.h  pixeloperator.h
src/include/options/: options.h
src/include/themes/: theme.h
src/include/widgets/: canvas.h  colorbar.h  drawtoolbar.h  layerbar.h  menubar.h  statusbar.h  widget.h
src/include/windows/: about.h  exportimg.h  layeropts.h  newsprite.h  window.h
src/options/: opttheme.c
src/widgets/: canvas.c  colorbar.c  drawtoolbar.c  layerbar.c  menubar.c  statusbar.c  widget.c
src/windows/: about.c  exportimg.c  layeropts.c  newsprite.c  window.c
